# history_clipboard

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/clipboard/: mod.rs
src/gui/: custom_button.rs  custom_radio.rs  list_filter.rs  mod.rs  multi_type_vector.rs  style.rs
src/gui/assets/: mod.rs
